--- a/views/countdown.ejs
+++ b/views/countdown.ejs
@@ -16,7 +16,7 @@
             <div class="section__title">Do dnia którego wypatrujesz zostało:</div>
             <div class="section__content">
                 <div class="countdown">
-                    <div class="countdown__inner">
+                    <!-- <div class="countdown__inner">
                         <div id="years" class="countdown__number">0</div>
                         <div class="countdown__time-unit">lata</div>
                     </div>
@@ -39,7 +39,7 @@
                     <div class="countdown__inner">
                         <div id="seconds" class="countdown__number">0</div>
                         <div class="countdown__time-unit">sekundy</div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
