Początek porządków w kodzie dot. gromadzenia informacji o wydarzeniu.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
         </div>
     </div>
     <script src="js/util/createElement.js"></script>
-    <script src="js/send_data.js"></script>
+    <script src="js/event_data.js"></script>
     <script src="js/calendar.js"></script>
 </body>
 </html>
