--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,10 @@
     text-align: justify;
     line-height: 1.5;
 }
+.section__link {
+    color: #ff7371;
+    font-weight: 700;
+}
 .label{
     font-size: 24px;
     color: var(--main-font-color);
